import { describe, expect, it } from 'vitest';

import {
  buildTaskRunPrompt,
  formatTaskCreated,
  formatTasksCreated,
  taskDetailHref,
  taskRef,
} from './index';

// Fixed reference time for stable timeAgo output
const NOW = new Date('2026-03-22T12:00:00Z');

const baseTask = { id: 'task_test', status: 'running' };

describe('task deep-links', () => {
  it('taskDetailHref returns a relative path without baseUrl', () => {
    expect(taskDetailHref('T-198')).toBe('/task/T-198');
  });

  it('taskDetailHref returns an absolute url with baseUrl (and strips trailing slash)', () => {
    expect(taskDetailHref('T-198', 'https://app.lobehub.com')).toBe(
      'https://app.lobehub.com/task/T-198',
    );
    expect(taskDetailHref('T-198', 'https://app.lobehub.com/')).toBe(
      'https://app.lobehub.com/task/T-198',
    );
  });

  it('taskRef renders a markdown link', () => {
    expect(taskRef('T-199')).toBe('[T-199](/task/T-199)');
    expect(taskRef('T-199', 'https://app.lobehub.com')).toBe(
      '[T-199](https://app.lobehub.com/task/T-199)',
    );
  });

  it('formatTaskCreated links identifier + parent, absolute when baseUrl is given (IM/bot)', () => {
    const out = formatTaskCreated({
      baseUrl: 'https://app.lobehub.com',
      identifier: 'T-198',
      instruction: 'do it',
      name: 'Parent task',
      parentLabel: 'T-100',
      priority: 2,
      status: 'backlog',
    });
    expect(out).toContain(
      'Task created: [T-198](https://app.lobehub.com/task/T-198) "Parent task"',
    );
    expect(out).toContain('Parent: [T-100](https://app.lobehub.com/task/T-100)');
  });

  it('formatTasksCreated renders a header + linked lines (relative without baseUrl)', () => {
    const out = formatTasksCreated([
      { identifier: 'T-1', name: 'A', success: true },
      { identifier: 'T-2', name: 'B', success: true },
    ]);
    expect(out).toBe(
      [
        'Created 2 tasks:',
        '1. [T-1](/task/T-1) "A" — created',
        '2. [T-2](/task/T-2) "B" — created',
      ].join('\n'),
    );
  });

  it('formatTasksCreated uses absolute links with baseUrl and reports failures', () => {
    const out = formatTasksCreated(
      [
        { identifier: 'T-1', name: 'A', success: true },
        { error: 'boom', name: 'B', success: false },
      ],
      'https://app.lobehub.com',
    );
    expect(out).toContain('Created 1/2 tasks (1 failed):');
    expect(out).toContain('1. [T-1](https://app.lobehub.com/task/T-1) "A" — created');
    expect(out).toContain('2. "B" — failed: boom');
  });
});

describe('buildTaskRunPrompt', () => {
  it('should build prompt with only task instruction', () => {
    const result = buildTaskRunPrompt(
      {
        task: {
          ...baseTask,
          identifier: 'TASK-1',
          instruction: '帮我写一本 AI Agent 技术书籍',
          name: '写一本书',
        },
      },
      NOW,
    );

    expect(result).toMatchSnapshot();
  });

  it('should build prompt with task description + instruction', () => {
    const result = buildTaskRunPrompt(
      {
        task: {
          ...baseTask,
          description: '面向开发者的技术书籍',
          identifier: 'TASK-1',
          instruction: '帮我写一本 AI Agent 技术书籍，目标 8 章',
          name: '写一本书',
        },
      },
      NOW,
    );

    expect(result).toMatchSnapshot();
  });

  it('should prioritize user feedback at the top', () => {
    const result = buildTaskRunPrompt(
      {
        activities: {
          comments: [
            { content: '第2章改为先上手再讲原理', createdAt: '2026-03-22T10:00:00Z' },
            { content: '增加评测章节', createdAt: '2026-03-22T10:30:00Z' },
          ],
        },
        task: {
          ...baseTask,
          identifier: 'TASK-1',
          instruction: '写书',
          name: '写一本书',
        },
      },
      NOW,
    );

    expect(result).toMatchSnapshot();
    // Verify feedback comes before task
    const feedbackIdx = result.indexOf('<user_feedback>');
    const taskIdx = result.indexOf('<task');
    expect(feedbackIdx).toBeLessThan(taskIdx);
  });

  it('should include agent comments with author label and time', () => {
    const result = buildTaskRunPrompt(
      {
        activities: {
          comments: [
            {
              agentId: 'agt_xxx',
              content: '大纲已完成，请确认',
              createdAt: '2026-03-22T09:00:00Z',
            },
            { content: '确认，开始写', createdAt: '2026-03-22T10:00:00Z' },
          ],
        },
        task: {
          ...baseTask,
          identifier: 'TASK-1',
          instruction: '写书',
          name: '写一本书',
        },
      },
      NOW,
    );

    expect(result).toMatchSnapshot();
    expect(result).toContain('🤖 agent');
    expect(result).toContain('👤 user');
    expect(result).toContain('3h ago');
    expect(result).toContain('2h ago');
  });

  it('should place high_priority_instruction first, then feedback', () => {
    const result = buildTaskRunPrompt(
      {
        activities: {
          comments: [{ content: '用户反馈', createdAt: '2026-03-22T11:00:00Z' }],
        },
        extraPrompt: '这次重点关注第3章',
        task: {
          ...baseTask,
          identifier: 'TASK-1',
          instruction: '写书',
          name: '写一本书',
        },
      },
      NOW,
    );

    expect(result).toMatchSnapshot();
    const feedbackIdx = result.indexOf('<user_feedback>');
    const extraIdx = result.indexOf('<high_priority_instruction>');
    const taskIdx = result.indexOf('<task');
    expect(extraIdx).toBeLessThan(feedbackIdx);
    expect(feedbackIdx).toBeLessThan(taskIdx);
  });

  it('should include activity history with topics and briefs in CLI style', () => {
    const result = buildTaskRunPrompt(
      {
        activities: {
          briefs: [
            {
              createdAt: '2026-03-21T17:05:00Z',
              id: 'brief_abc123',
              priority: 'urgent',
              resolvedAction: 'approve',
              resolvedAt: '2026-03-21T17:30:00Z',
              summary: '8章大纲已制定完成',
              title: '大纲完成',
              type: 'decision',
            },
            {
              createdAt: '2026-03-21T18:00:00Z',
              id: 'brief_def456',
              priority: 'normal',
              resolvedAt: null,
              summary: '第4章内容过多，建议拆分',
              title: '建议拆分第4章',
              type: 'decision',
            },
          ],
          topics: [
            {
              createdAt: '2026-03-21T17:00:00Z',
              handoff: { summary: '完成了大纲制定' },
              id: 'tpc_aaa',
              seq: 1,
              status: 'completed',
              title: '制定大纲',
            },
            {
              createdAt: '2026-03-21T17:31:00Z',
              handoff: { summary: '修订了大纲并拆分子任务' },
              id: 'tpc_bbb',
              seq: 2,
              status: 'completed',
              title: '修订大纲',
            },
          ],
        },
        task: {
          ...baseTask,
          identifier: 'TASK-1',
          instruction: '写书',
          name: '写一本书',
        },
      },
      NOW,
    );

    expect(result).toMatchSnapshot();
    // Verify timeline is sorted chronologically (oldest first)
    // Data: topic1(17:00), brief1(17:05), topic2(17:31), brief2(18:00)
    const taskSection = result.match(/<task>[\s\S]*<\/task>/)?.[0] || '';
    const topic1Idx = taskSection.indexOf('Topic #1');
    const brief1Idx = taskSection.indexOf('brief_abc123');
    const topic2Idx = taskSection.indexOf('Topic #2');
    const brief2Idx = taskSection.indexOf('brief_def456');
    expect(topic1Idx).toBeLessThan(brief1Idx);
    expect(brief1Idx).toBeLessThan(topic2Idx);
    expect(topic2Idx).toBeLessThan(brief2Idx);
  });

  it('should show resolved action and comment on briefs', () => {
    const result = buildTaskRunPrompt(
      {
        activities: {
          briefs: [
            {
              createdAt: '2026-03-21T17:00:00Z',
              resolvedAction: 'feedback',
              resolvedAt: '2026-03-21T18:00:00Z',
              resolvedComment: '第2章需要更多实例',
              summary: '第2章初稿完成',
              title: '第2章完成',
              type: 'result',
            },
          ],
        },
        task: {
          ...baseTask,
          identifier: 'TASK-2',
          instruction: '写第2章',
          name: '第2章',
        },
      },
      NOW,
    );

    expect(result).toMatchSnapshot();
    expect(result).toContain('第2章需要更多实例');
  });

  it('should handle full scenario with all sections', () => {
    const result = buildTaskRunPrompt(
      {
        activities: {
          briefs: [
            {
              createdAt: '2026-03-21T17:05:00Z',
              id: 'brief_001',
              resolvedAction: 'approve',
              resolvedAt: '2026-03-21T17:30:00Z',
              summary: '大纲已完成',
              title: '大纲完成',
              type: 'decision',
            },
          ],
          comments: [
            { content: '第5章后移，增加评测章节', createdAt: '2026-03-22T09:00:00Z' },
            { agentId: 'agt_inbox', content: '已调整大纲', createdAt: '2026-03-22T09:05:00Z' },
          ],
          topics: [
            {
              createdAt: '2026-03-21T17:00:00Z',
              handoff: { summary: '完成大纲' },
              id: 'tpc_001',
              seq: 1,
              status: 'completed',
              title: '制定大纲',
            },
          ],
        },
        extraPrompt: '这次直接开始写第1章',
        task: {
          ...baseTask,
          description: '面向开发者的 AI Agent 技术书籍',
          identifier: 'TASK-1',
          instruction: '写一本 AI Agent 书，目标 8 章',
          name: '写一本书',
        },
      },
      NOW,
    );

    expect(result).toMatchSnapshot();

    // Verify order: instruction → feedback → task (activities now inside task)
    const tags = ['<high_priority_instruction>', '<user_feedback>', '<task>'];
    let lastIdx = -1;
    for (const tag of tags) {
      const idx = result.indexOf(tag);
      expect(idx).toBeGreaterThan(lastIdx);
      lastIdx = idx;
    }
  });

  it('should handle empty activities gracefully', () => {
    const result = buildTaskRunPrompt(
      {
        activities: {
          briefs: [],
          comments: [],
          topics: [],
        },
        task: {
          ...baseTask,
          identifier: 'TASK-1',
          instruction: '写书',
          name: '写一本书',
        },
      },
      NOW,
    );

    expect(result).toMatchSnapshot();
    expect(result).not.toContain('<user_feedback>');
    expect(result).not.toContain('<activities>');
  });

  it('should render the verify delivery-acceptance section with criteria and evidence', () => {
    const result = buildTaskRunPrompt(
      {
        task: {
          id: 'task_root',
          identifier: 'TASK-1',
          instruction: 'ship the feature',
          status: 'running',
          verify: {
            criteria: [
              {
                required: true,
                requiredEvidence: [{ hint: 'full page', type: 'screenshot' }],
                title: 'login page renders',
              },
              { required: false, title: 'console is clean' },
            ],
            enabled: true,
            maxIterations: 2,
            requirement: 'the login flow works end to end',
          },
        },
      },
      NOW,
    );

    expect(result).toContain('Verify — delivery acceptance (maxIterations: 2)');
    expect(result).toContain('Requirement: the login flow works end to end');
    expect(result).toContain('login page renders (required)');
    expect(result).toContain('· evidence: screenshot — full page');
    expect(result).toContain('console is clean');
    expect(result).toContain('lobe-delivery-checker');
    expect(result).toContain('Do not call the verify skill');
    expect(result).not.toContain('skill resolves your verify run');
  });

  it('tells a scheduled run not to confirm the cron, sweep, or use lh', () => {
    const result = buildTaskRunPrompt(
      {
        task: {
          id: 'task_root',
          identifier: 'T-1',
          instruction: '每天 10:00，请根据我提供的前一日产线数据汇总日报',
          name: '生产日报',
          status: 'backlog',
        },
      },
      NOW,
    );

    expect(result).toContain('started by the schedule or task runner');
    expect(result).toContain('addTaskComment');
    expect(result).toContain('schedule not confirmed');
    expect(result).toContain('already complete');
    expect(result).toContain('updateTaskStatus');
    expect(result).toContain('lobe-delivery-checker');
    expect(result).toContain('lobe-task tools');
    expect(result).toContain('lobe-reminder');
    expect(result).toContain('staff:');
    expect(result).not.toContain('skill resolves your verify run');
  });

  it('should omit the verify section when verify is disabled', () => {
    const result = buildTaskRunPrompt(
      {
        task: {
          id: 'task_root',
          identifier: 'TASK-1',
          instruction: 'ship the feature',
          status: 'running',
          verify: { criteria: [{ title: 'x' }], enabled: false, requirement: 'r' },
        },
      },
      NOW,
    );

    expect(result).not.toContain('Verify — delivery acceptance');
  });

  it('should include subtasks in task section', () => {
    const result = buildTaskRunPrompt(
      {
        task: {
          id: 'task_root',
          identifier: 'TASK-1',
          instruction: '写书',
          name: '写一本书',
          status: 'running',
          subtasks: [
            { identifier: 'TASK-2', name: '第1章 Agent 概述', priority: 3, status: 'completed' },
            {
              blockedBy: 'TASK-2',
              identifier: 'TASK-3',
              name: '第2章 快速上手',
              priority: 3,
              status: 'backlog',
            },
          ],
        },
      },
      NOW,
    );

    expect(result).toMatchSnapshot();
    expect(result).toContain('TASK-2');
    expect(result).toContain('TASK-3');
    expect(result).toContain('← blocks: TASK-2');
  });

  it('should truncate comments to 80 chars in activities but keep full in user_feedback', () => {
    const longContent = 'A'.repeat(90) + ' — this part should be truncated in activities';
    const result = buildTaskRunPrompt(
      {
        activities: {
          comments: [{ content: longContent, createdAt: '2026-03-22T11:00:00Z' }],
        },
        task: {
          ...baseTask,
          identifier: 'TASK-1',
          instruction: '写书',
          name: '写一本书',
        },
      },
      NOW,
    );

    expect(result).toMatchSnapshot();
    // user_feedback should have full content
    const feedbackSection = result.split('<user_feedback>')[1]?.split('</user_feedback>')[0] || '';
    expect(feedbackSection).toContain(longContent);
    // activities comment should be truncated
    const taskSection = result.match(/<task>[\s\S]*<\/task>/)?.[0] || '';
    expect(taskSection).toContain('...');
    expect(taskSection).not.toContain(longContent);
  });

  it('should include subtasks in task tag when provided', () => {
    const result = buildTaskRunPrompt(
      {
        task: {
          id: 'task_001',
          identifier: 'TASK-1',
          instruction: '写一本 AI Agent 书，目标 8 章',
          name: '写一本书',
          status: 'running',
          subtasks: [
            { identifier: 'TASK-2', name: '第1章 AI Agent 概述', priority: 3, status: 'running' },
            { identifier: 'TASK-3', name: '第2章 核心架构', priority: 3, status: 'backlog' },
            { identifier: 'TASK-4', name: '第3章 手写 Agent', priority: 2, status: 'backlog' },
          ],
        },
      },
      NOW,
    );

    expect(result).toMatchSnapshot();
    // Verify subtasks appear between <task> and </task>
    const taskMatch = result.match(/<task>[\s\S]*<\/task>/)?.[0] || '';
    expect(taskMatch).toContain('Subtasks:');
    expect(taskMatch).toContain('TASK-2');
    expect(taskMatch).toContain('TASK-3');
    expect(taskMatch).toContain('TASK-4');
    // Verify hint is present
    expect(taskMatch).toContain('Do NOT call viewTask');
  });

  it('should include parentTask context for subtasks', () => {
    const result = buildTaskRunPrompt(
      {
        parentTask: {
          identifier: 'TASK-1',
          instruction: '写一本 AI Agent 书，目标 8 章',
          name: '写一本书',
          subtasks: [
            { identifier: 'TASK-2', name: '第1章 概述', priority: 3, status: 'completed' },
            {
              blockedBy: 'TASK-2',
              identifier: 'TASK-4',
              name: '第2章 核心架构',
              priority: 3,
              status: 'running',
            },
            {
              blockedBy: 'TASK-4',
              identifier: 'TASK-6',
              name: '第3章 手写 Agent',
              priority: 2,
              status: 'backlog',
            },
          ],
        },
        task: {
          id: 'task_004',
          identifier: 'TASK-4',
          instruction: '撰写第2章',
          name: '第2章 核心架构',
          parentIdentifier: 'TASK-1',
          status: 'running',
        },
      },
      NOW,
    );

    expect(result).toMatchSnapshot();
    // Verify parentTask block exists inside <task>
    const taskSection = result.match(/<task>[\s\S]*<\/task>/)?.[0] || '';
    expect(taskSection).toContain('<parentTask');
    expect(taskSection).toContain('TASK-1');
    expect(taskSection).toContain('写一本 AI Agent 书');
    // Current task should be marked
    expect(taskSection).toContain('TASK-4');
    expect(taskSection).toContain('◀ current');
    // Dependency info
    expect(taskSection).toContain('← blocks: TASK-2');
    expect(taskSection).toContain('← blocks: TASK-4');
  });

  it('should only include user comments in user_feedback, not agent comments', () => {
    const result = buildTaskRunPrompt(
      {
        activities: {
          comments: [
            { content: '用户反馈', createdAt: '2026-03-22T10:00:00Z' },
            { agentId: 'agt_xxx', content: 'Agent 回复', createdAt: '2026-03-22T10:05:00Z' },
          ],
        },
        task: {
          ...baseTask,
          identifier: 'TASK-1',
          instruction: '写书',
          name: '写一本书',
        },
      },
      NOW,
    );

    expect(result).toMatchSnapshot();
    const feedbackSection = result.split('<user_feedback>')[1]?.split('</user_feedback>')[0] || '';
    expect(feedbackSection).toContain('用户反馈');
    expect(feedbackSection).not.toContain('Agent 回复');
    // But activities should have both
    const taskSection = result.match(/<task>[\s\S]*<\/task>/)?.[0] || '';
    expect(taskSection).toContain('👤 user');
    expect(taskSection).toContain('🤖 agent');
  });
});
