// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildTaskRunPrompt > should build prompt with only task instruction 1`] = `
"<task>
<hint>This tag contains the complete task context. Do NOT call viewTask to re-fetch it.</hint>
TASK-1 写一本书
Status: ● running     Priority: -
Instruction: 帮我写一本 AI Agent 技术书籍

Review: (not configured)
<run_rules>
This message was started by the schedule or task runner. Do not ask the user to confirm the schedule, and do not say the schedule is not configured.
If required input data is missing, call addTaskComment stating exactly what is missing, then stop. Do not invent a status such as "schedule not confirmed".
If Status is completed and this run has no high_priority_instruction and no user_feedback, reply with one line that the task is already complete, then stop. Do not invent missing fields.
If the workspace already contains the requested deliverable, call updateTaskStatus to mark it completed, or state in one line what is still missing.
Do not use the verify skill or "lh verify submit". For delivery acceptance on this run, use lobe-delivery-checker.
Do not use the lh CLI via runCommand for task operations. Use lobe-task tools: viewTask, editTask, addTaskComment, updateTaskStatus, setTaskSchedule, runTask.
The instruction is complete. Do not sweep memory, the skill market, the knowledge base, or local-system unless the instruction explicitly needs them.
To reach colleagues on this deployment, use lobe-reminder (DingTalk work notifications, directory staff: ids). Do not use Messenger bots, 飞书, 微信, or email.
</run_rules>
</task>"
`;

exports[`buildTaskRunPrompt > should build prompt with task description + instruction 1`] = `
"<task>
<hint>This tag contains the complete task context. Do NOT call viewTask to re-fetch it.</hint>
TASK-1 写一本书
Status: ● running     Priority: -
Instruction: 帮我写一本 AI Agent 技术书籍，目标 8 章
Description: 面向开发者的技术书籍

Review: (not configured)
<run_rules>
This message was started by the schedule or task runner. Do not ask the user to confirm the schedule, and do not say the schedule is not configured.
If required input data is missing, call addTaskComment stating exactly what is missing, then stop. Do not invent a status such as "schedule not confirmed".
If Status is completed and this run has no high_priority_instruction and no user_feedback, reply with one line that the task is already complete, then stop. Do not invent missing fields.
If the workspace already contains the requested deliverable, call updateTaskStatus to mark it completed, or state in one line what is still missing.
Do not use the verify skill or "lh verify submit". For delivery acceptance on this run, use lobe-delivery-checker.
Do not use the lh CLI via runCommand for task operations. Use lobe-task tools: viewTask, editTask, addTaskComment, updateTaskStatus, setTaskSchedule, runTask.
The instruction is complete. Do not sweep memory, the skill market, the knowledge base, or local-system unless the instruction explicitly needs them.
To reach colleagues on this deployment, use lobe-reminder (DingTalk work notifications, directory staff: ids). Do not use Messenger bots, 飞书, 微信, or email.
</run_rules>
</task>"
`;

exports[`buildTaskRunPrompt > should handle empty activities gracefully 1`] = `
"<task>
<hint>This tag contains the complete task context. Do NOT call viewTask to re-fetch it.</hint>
TASK-1 写一本书
Status: ● running     Priority: -
Instruction: 写书

Review: (not configured)
<run_rules>
This message was started by the schedule or task runner. Do not ask the user to confirm the schedule, and do not say the schedule is not configured.
If required input data is missing, call addTaskComment stating exactly what is missing, then stop. Do not invent a status such as "schedule not confirmed".
If Status is completed and this run has no high_priority_instruction and no user_feedback, reply with one line that the task is already complete, then stop. Do not invent missing fields.
If the workspace already contains the requested deliverable, call updateTaskStatus to mark it completed, or state in one line what is still missing.
Do not use the verify skill or "lh verify submit". For delivery acceptance on this run, use lobe-delivery-checker.
Do not use the lh CLI via runCommand for task operations. Use lobe-task tools: viewTask, editTask, addTaskComment, updateTaskStatus, setTaskSchedule, runTask.
The instruction is complete. Do not sweep memory, the skill market, the knowledge base, or local-system unless the instruction explicitly needs them.
To reach colleagues on this deployment, use lobe-reminder (DingTalk work notifications, directory staff: ids). Do not use Messenger bots, 飞书, 微信, or email.
</run_rules>
</task>"
`;

exports[`buildTaskRunPrompt > should handle full scenario with all sections 1`] = `
"<high_priority_instruction>
这次直接开始写第1章
</high_priority_instruction>

<user_feedback>
<comment time="3h ago">第5章后移，增加评测章节</comment>
</user_feedback>

<task>
<hint>This tag contains the complete task context. Do NOT call viewTask to re-fetch it.</hint>
TASK-1 写一本书
Status: ● running     Priority: -
Instruction: 写一本 AI Agent 书，目标 8 章
Description: 面向开发者的 AI Agent 技术书籍
Topics: 1

Review: (not configured)

Activities:
  💬 19h ago Topic #1 制定大纲 ✓ completed  tpc_001
  📋 18h ago Brief [decision] 大纲完成 ✅ approve  brief_001
  💭 3h ago 👤 user 第5章后移，增加评测章节
  💭 2h ago 🤖 agent 已调整大纲
<run_rules>
This message was started by the schedule or task runner. Do not ask the user to confirm the schedule, and do not say the schedule is not configured.
If required input data is missing, call addTaskComment stating exactly what is missing, then stop. Do not invent a status such as "schedule not confirmed".
If Status is completed and this run has no high_priority_instruction and no user_feedback, reply with one line that the task is already complete, then stop. Do not invent missing fields.
If the workspace already contains the requested deliverable, call updateTaskStatus to mark it completed, or state in one line what is still missing.
Do not use the verify skill or "lh verify submit". For delivery acceptance on this run, use lobe-delivery-checker.
Do not use the lh CLI via runCommand for task operations. Use lobe-task tools: viewTask, editTask, addTaskComment, updateTaskStatus, setTaskSchedule, runTask.
The instruction is complete. Do not sweep memory, the skill market, the knowledge base, or local-system unless the instruction explicitly needs them.
To reach colleagues on this deployment, use lobe-reminder (DingTalk work notifications, directory staff: ids). Do not use Messenger bots, 飞书, 微信, or email.
</run_rules>
</task>"
`;

exports[`buildTaskRunPrompt > should include activity history with topics and briefs in CLI style 1`] = `
"<task>
<hint>This tag contains the complete task context. Do NOT call viewTask to re-fetch it.</hint>
TASK-1 写一本书
Status: ● running     Priority: -
Instruction: 写书
Topics: 2

Review: (not configured)

Activities:
  💬 19h ago Topic #1 制定大纲 ✓ completed  tpc_aaa
  📋 18h ago Brief [decision] 大纲完成 [urgent] ✅ approve  brief_abc123
  💬 18h ago Topic #2 修订大纲 ✓ completed  tpc_bbb
  📋 18h ago Brief [decision] 建议拆分第4章 [normal]  brief_def456
<run_rules>
This message was started by the schedule or task runner. Do not ask the user to confirm the schedule, and do not say the schedule is not configured.
If required input data is missing, call addTaskComment stating exactly what is missing, then stop. Do not invent a status such as "schedule not confirmed".
If Status is completed and this run has no high_priority_instruction and no user_feedback, reply with one line that the task is already complete, then stop. Do not invent missing fields.
If the workspace already contains the requested deliverable, call updateTaskStatus to mark it completed, or state in one line what is still missing.
Do not use the verify skill or "lh verify submit". For delivery acceptance on this run, use lobe-delivery-checker.
Do not use the lh CLI via runCommand for task operations. Use lobe-task tools: viewTask, editTask, addTaskComment, updateTaskStatus, setTaskSchedule, runTask.
The instruction is complete. Do not sweep memory, the skill market, the knowledge base, or local-system unless the instruction explicitly needs them.
To reach colleagues on this deployment, use lobe-reminder (DingTalk work notifications, directory staff: ids). Do not use Messenger bots, 飞书, 微信, or email.
</run_rules>
</task>"
`;

exports[`buildTaskRunPrompt > should include agent comments with author label and time 1`] = `
"<user_feedback>
<comment time="2h ago">确认，开始写</comment>
</user_feedback>

<task>
<hint>This tag contains the complete task context. Do NOT call viewTask to re-fetch it.</hint>
TASK-1 写一本书
Status: ● running     Priority: -
Instruction: 写书

Review: (not configured)

Activities:
  💭 3h ago 🤖 agent 大纲已完成，请确认
  💭 2h ago 👤 user 确认，开始写
<run_rules>
This message was started by the schedule or task runner. Do not ask the user to confirm the schedule, and do not say the schedule is not configured.
If required input data is missing, call addTaskComment stating exactly what is missing, then stop. Do not invent a status such as "schedule not confirmed".
If Status is completed and this run has no high_priority_instruction and no user_feedback, reply with one line that the task is already complete, then stop. Do not invent missing fields.
If the workspace already contains the requested deliverable, call updateTaskStatus to mark it completed, or state in one line what is still missing.
Do not use the verify skill or "lh verify submit". For delivery acceptance on this run, use lobe-delivery-checker.
Do not use the lh CLI via runCommand for task operations. Use lobe-task tools: viewTask, editTask, addTaskComment, updateTaskStatus, setTaskSchedule, runTask.
The instruction is complete. Do not sweep memory, the skill market, the knowledge base, or local-system unless the instruction explicitly needs them.
To reach colleagues on this deployment, use lobe-reminder (DingTalk work notifications, directory staff: ids). Do not use Messenger bots, 飞书, 微信, or email.
</run_rules>
</task>"
`;

exports[`buildTaskRunPrompt > should include parentTask context for subtasks 1`] = `
"<task>
<hint>This tag contains the complete task context. Do NOT call viewTask to re-fetch it.</hint>
TASK-4 第2章 核心架构
Status: ● running     Priority: -
Instruction: 撰写第2章
Parent: TASK-1

Review: (not configured)

<parentTask identifier="TASK-1" name="写一本书">
  Instruction: 写一本 AI Agent 书，目标 8 章
  Subtasks (3):
    TASK-2 ✓ completed 第1章 概述
    TASK-4 ● running 第2章 核心架构 ← blocks: TASK-2 ◀ current
    TASK-6 ○ backlog 第3章 手写 Agent ← blocks: TASK-4
</parentTask>
<run_rules>
This message was started by the schedule or task runner. Do not ask the user to confirm the schedule, and do not say the schedule is not configured.
If required input data is missing, call addTaskComment stating exactly what is missing, then stop. Do not invent a status such as "schedule not confirmed".
If Status is completed and this run has no high_priority_instruction and no user_feedback, reply with one line that the task is already complete, then stop. Do not invent missing fields.
If the workspace already contains the requested deliverable, call updateTaskStatus to mark it completed, or state in one line what is still missing.
Do not use the verify skill or "lh verify submit". For delivery acceptance on this run, use lobe-delivery-checker.
Do not use the lh CLI via runCommand for task operations. Use lobe-task tools: viewTask, editTask, addTaskComment, updateTaskStatus, setTaskSchedule, runTask.
The instruction is complete. Do not sweep memory, the skill market, the knowledge base, or local-system unless the instruction explicitly needs them.
To reach colleagues on this deployment, use lobe-reminder (DingTalk work notifications, directory staff: ids). Do not use Messenger bots, 飞书, 微信, or email.
</run_rules>
</task>"
`;

exports[`buildTaskRunPrompt > should include subtasks in task section 1`] = `
"<task>
<hint>This tag contains the complete task context. Do NOT call viewTask to re-fetch it.</hint>
TASK-1 写一本书
Status: ● running     Priority: -
Instruction: 写书

Subtasks:
  TASK-2 ✓ completed 第1章 Agent 概述
  TASK-3 ○ backlog 第2章 快速上手 ← blocks: TASK-2

Review: (not configured)
<run_rules>
This message was started by the schedule or task runner. Do not ask the user to confirm the schedule, and do not say the schedule is not configured.
If required input data is missing, call addTaskComment stating exactly what is missing, then stop. Do not invent a status such as "schedule not confirmed".
If Status is completed and this run has no high_priority_instruction and no user_feedback, reply with one line that the task is already complete, then stop. Do not invent missing fields.
If the workspace already contains the requested deliverable, call updateTaskStatus to mark it completed, or state in one line what is still missing.
Do not use the verify skill or "lh verify submit". For delivery acceptance on this run, use lobe-delivery-checker.
Do not use the lh CLI via runCommand for task operations. Use lobe-task tools: viewTask, editTask, addTaskComment, updateTaskStatus, setTaskSchedule, runTask.
The instruction is complete. Do not sweep memory, the skill market, the knowledge base, or local-system unless the instruction explicitly needs them.
To reach colleagues on this deployment, use lobe-reminder (DingTalk work notifications, directory staff: ids). Do not use Messenger bots, 飞书, 微信, or email.
</run_rules>
</task>"
`;

exports[`buildTaskRunPrompt > should include subtasks in task tag when provided 1`] = `
"<task>
<hint>This tag contains the complete task context. Do NOT call viewTask to re-fetch it.</hint>
TASK-1 写一本书
Status: ● running     Priority: -
Instruction: 写一本 AI Agent 书，目标 8 章

Subtasks:
  TASK-2 ● running 第1章 AI Agent 概述
  TASK-3 ○ backlog 第2章 核心架构
  TASK-4 ○ backlog 第3章 手写 Agent

Review: (not configured)
<run_rules>
This message was started by the schedule or task runner. Do not ask the user to confirm the schedule, and do not say the schedule is not configured.
If required input data is missing, call addTaskComment stating exactly what is missing, then stop. Do not invent a status such as "schedule not confirmed".
If Status is completed and this run has no high_priority_instruction and no user_feedback, reply with one line that the task is already complete, then stop. Do not invent missing fields.
If the workspace already contains the requested deliverable, call updateTaskStatus to mark it completed, or state in one line what is still missing.
Do not use the verify skill or "lh verify submit". For delivery acceptance on this run, use lobe-delivery-checker.
Do not use the lh CLI via runCommand for task operations. Use lobe-task tools: viewTask, editTask, addTaskComment, updateTaskStatus, setTaskSchedule, runTask.
The instruction is complete. Do not sweep memory, the skill market, the knowledge base, or local-system unless the instruction explicitly needs them.
To reach colleagues on this deployment, use lobe-reminder (DingTalk work notifications, directory staff: ids). Do not use Messenger bots, 飞书, 微信, or email.
</run_rules>
</task>"
`;

exports[`buildTaskRunPrompt > should only include user comments in user_feedback, not agent comments 1`] = `
"<user_feedback>
<comment time="2h ago">用户反馈</comment>
</user_feedback>

<task>
<hint>This tag contains the complete task context. Do NOT call viewTask to re-fetch it.</hint>
TASK-1 写一本书
Status: ● running     Priority: -
Instruction: 写书

Review: (not configured)

Activities:
  💭 2h ago 👤 user 用户反馈
  💭 1h ago 🤖 agent Agent 回复
<run_rules>
This message was started by the schedule or task runner. Do not ask the user to confirm the schedule, and do not say the schedule is not configured.
If required input data is missing, call addTaskComment stating exactly what is missing, then stop. Do not invent a status such as "schedule not confirmed".
If Status is completed and this run has no high_priority_instruction and no user_feedback, reply with one line that the task is already complete, then stop. Do not invent missing fields.
If the workspace already contains the requested deliverable, call updateTaskStatus to mark it completed, or state in one line what is still missing.
Do not use the verify skill or "lh verify submit". For delivery acceptance on this run, use lobe-delivery-checker.
Do not use the lh CLI via runCommand for task operations. Use lobe-task tools: viewTask, editTask, addTaskComment, updateTaskStatus, setTaskSchedule, runTask.
The instruction is complete. Do not sweep memory, the skill market, the knowledge base, or local-system unless the instruction explicitly needs them.
To reach colleagues on this deployment, use lobe-reminder (DingTalk work notifications, directory staff: ids). Do not use Messenger bots, 飞书, 微信, or email.
</run_rules>
</task>"
`;

exports[`buildTaskRunPrompt > should place high_priority_instruction first, then feedback 1`] = `
"<high_priority_instruction>
这次重点关注第3章
</high_priority_instruction>

<user_feedback>
<comment time="1h ago">用户反馈</comment>
</user_feedback>

<task>
<hint>This tag contains the complete task context. Do NOT call viewTask to re-fetch it.</hint>
TASK-1 写一本书
Status: ● running     Priority: -
Instruction: 写书

Review: (not configured)

Activities:
  💭 1h ago 👤 user 用户反馈
<run_rules>
This message was started by the schedule or task runner. Do not ask the user to confirm the schedule, and do not say the schedule is not configured.
If required input data is missing, call addTaskComment stating exactly what is missing, then stop. Do not invent a status such as "schedule not confirmed".
If Status is completed and this run has no high_priority_instruction and no user_feedback, reply with one line that the task is already complete, then stop. Do not invent missing fields.
If the workspace already contains the requested deliverable, call updateTaskStatus to mark it completed, or state in one line what is still missing.
Do not use the verify skill or "lh verify submit". For delivery acceptance on this run, use lobe-delivery-checker.
Do not use the lh CLI via runCommand for task operations. Use lobe-task tools: viewTask, editTask, addTaskComment, updateTaskStatus, setTaskSchedule, runTask.
The instruction is complete. Do not sweep memory, the skill market, the knowledge base, or local-system unless the instruction explicitly needs them.
To reach colleagues on this deployment, use lobe-reminder (DingTalk work notifications, directory staff: ids). Do not use Messenger bots, 飞书, 微信, or email.
</run_rules>
</task>"
`;

exports[`buildTaskRunPrompt > should prioritize user feedback at the top 1`] = `
"<user_feedback>
<comment time="2h ago">第2章改为先上手再讲原理</comment>
<comment time="1h ago">增加评测章节</comment>
</user_feedback>

<task>
<hint>This tag contains the complete task context. Do NOT call viewTask to re-fetch it.</hint>
TASK-1 写一本书
Status: ● running     Priority: -
Instruction: 写书

Review: (not configured)

Activities:
  💭 2h ago 👤 user 第2章改为先上手再讲原理
  💭 1h ago 👤 user 增加评测章节
<run_rules>
This message was started by the schedule or task runner. Do not ask the user to confirm the schedule, and do not say the schedule is not configured.
If required input data is missing, call addTaskComment stating exactly what is missing, then stop. Do not invent a status such as "schedule not confirmed".
If Status is completed and this run has no high_priority_instruction and no user_feedback, reply with one line that the task is already complete, then stop. Do not invent missing fields.
If the workspace already contains the requested deliverable, call updateTaskStatus to mark it completed, or state in one line what is still missing.
Do not use the verify skill or "lh verify submit". For delivery acceptance on this run, use lobe-delivery-checker.
Do not use the lh CLI via runCommand for task operations. Use lobe-task tools: viewTask, editTask, addTaskComment, updateTaskStatus, setTaskSchedule, runTask.
The instruction is complete. Do not sweep memory, the skill market, the knowledge base, or local-system unless the instruction explicitly needs them.
To reach colleagues on this deployment, use lobe-reminder (DingTalk work notifications, directory staff: ids). Do not use Messenger bots, 飞书, 微信, or email.
</run_rules>
</task>"
`;

exports[`buildTaskRunPrompt > should show resolved action and comment on briefs 1`] = `
"<task>
<hint>This tag contains the complete task context. Do NOT call viewTask to re-fetch it.</hint>
TASK-2 第2章
Status: ● running     Priority: -
Instruction: 写第2章

Review: (not configured)

Activities:
  ✅ 19h ago Brief [result] 第2章完成 ✏️ 第2章需要更多实例
<run_rules>
This message was started by the schedule or task runner. Do not ask the user to confirm the schedule, and do not say the schedule is not configured.
If required input data is missing, call addTaskComment stating exactly what is missing, then stop. Do not invent a status such as "schedule not confirmed".
If Status is completed and this run has no high_priority_instruction and no user_feedback, reply with one line that the task is already complete, then stop. Do not invent missing fields.
If the workspace already contains the requested deliverable, call updateTaskStatus to mark it completed, or state in one line what is still missing.
Do not use the verify skill or "lh verify submit". For delivery acceptance on this run, use lobe-delivery-checker.
Do not use the lh CLI via runCommand for task operations. Use lobe-task tools: viewTask, editTask, addTaskComment, updateTaskStatus, setTaskSchedule, runTask.
The instruction is complete. Do not sweep memory, the skill market, the knowledge base, or local-system unless the instruction explicitly needs them.
To reach colleagues on this deployment, use lobe-reminder (DingTalk work notifications, directory staff: ids). Do not use Messenger bots, 飞书, 微信, or email.
</run_rules>
</task>"
`;

exports[`buildTaskRunPrompt > should truncate comments to 80 chars in activities but keep full in user_feedback 1`] = `
"<user_feedback>
<comment time="1h ago">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA — this part should be truncated in activities</comment>
</user_feedback>

<task>
<hint>This tag contains the complete task context. Do NOT call viewTask to re-fetch it.</hint>
TASK-1 写一本书
Status: ● running     Priority: -
Instruction: 写书

Review: (not configured)

Activities:
  💭 1h ago 👤 user AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA...
<run_rules>
This message was started by the schedule or task runner. Do not ask the user to confirm the schedule, and do not say the schedule is not configured.
If required input data is missing, call addTaskComment stating exactly what is missing, then stop. Do not invent a status such as "schedule not confirmed".
If Status is completed and this run has no high_priority_instruction and no user_feedback, reply with one line that the task is already complete, then stop. Do not invent missing fields.
If the workspace already contains the requested deliverable, call updateTaskStatus to mark it completed, or state in one line what is still missing.
Do not use the verify skill or "lh verify submit". For delivery acceptance on this run, use lobe-delivery-checker.
Do not use the lh CLI via runCommand for task operations. Use lobe-task tools: viewTask, editTask, addTaskComment, updateTaskStatus, setTaskSchedule, runTask.
The instruction is complete. Do not sweep memory, the skill market, the knowledge base, or local-system unless the instruction explicitly needs them.
To reach colleagues on this deployment, use lobe-reminder (DingTalk work notifications, directory staff: ids). Do not use Messenger bots, 飞书, 微信, or email.
</run_rules>
</task>"
`;
